--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
     "private": true,
     "devDependencies": {
         "mocha": "5.0.0",
-        "unit.js": "2.0.0"
+        "unit.js": "2.0.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-jest": "^23.0.1",
+        "babel-preset-env": "^1.7.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0"
     },
     "scripts": {
+        "clean": "rm -rf dist && mkdir dist",
+        "build": "npm run clean && babel -d ./dist ./src",
         "test": "mocha --recursive tests"
     }
 }
