--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         "clean": "rm -rf dist && mkdir dist",
         "build": "npm run clean && babel -d ./dist ./src",
         "test": "mocha --recursive tests"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "ejs": "^2.6.1",
+        "js-yaml": "^3.12.0",
+        "moment": "^2.22.2"
     }
 }
