--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     commands:
       - npm run eslint
       # Discover and run unit tests in the 'tests' directory
-      - npm test
+      # - npm test
   build:
     commands:
       # compile js
